@@ -1,155 +1,159 @@
 package com.example.micro.security;
 
-import io.jsonwebtoken.Claims;
-import io.jsonwebtoken.ExpiredJwtException;
-import io.jsonwebtoken.Jwts;
-import io.jsonwebtoken.MalformedJwtException;
-import io.jsonwebtoken.UnsupportedJwtException;
-import io.jsonwebtoken.security.Keys;
-import io.jsonwebtoken.security.SignatureException;
+import java.io.IOException;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.lang.NonNull;
+import org.springframework.core.env.Environment;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.User;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
-import org.springframework.stereotype.Component;
+import org.springframework.web.client.RestClientException;
+import org.springframework.web.client.RestTemplate;
 import org.springframework.web.filter.OncePerRequestFilter;
 
-import java.io.IOException;
-import java.security.Key;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Date;
-import java.util.List;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 
-@Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
-
     private static final Logger logger = LoggerFactory.getLogger(JwtAuthenticationFilter.class);
 
-    @Value("${jwt.secret:7dJpxYxnzOdZsrDZrGhK3uQtyGdOJWvdMLXF8YRpfM3g6s9olJ}")
-    private String secretKey;
+    @Value("${spring.security.jwt.enabled:true}")
+    private boolean jwtEnabled;
+
+    @Value("${spring.core.service.url:http://localhost:8081}")
+    private String coreServiceUrl;
+
+    @Value("${spring.core.service.validate-token-endpoint:/api/auth/validate}")
+    private String validateTokenEndpoint;
+
+    private final Environment environment;
+    private final RestTemplate restTemplate;
+    private final ObjectMapper objectMapper;
+
+    @Autowired
+    public JwtAuthenticationFilter(Environment environment, RestTemplate restTemplate, ObjectMapper objectMapper) {
+        this.environment = environment;
+        this.restTemplate = restTemplate;
+        this.objectMapper = objectMapper;
+    }
 
     @Override
-    protected void doFilterInternal(
-            @NonNull HttpServletRequest request,
-            @NonNull HttpServletResponse response,
-            @NonNull FilterChain filterChain
-    ) throws ServletException, IOException {
-        final String authHeader = request.getHeader("Authorization");
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
+            throws ServletException, IOException {
 
-        // No auth header, continue to next filter
-        if (authHeader == null || !authHeader.startsWith("Bearer ")) {
+        // Skip JWT validation in test environment or if JWT is disabled
+        if (environment.matchesProfiles("test") || !jwtEnabled) {
+            logger.debug("JWT validation skipped: test profile active or JWT disabled");
             filterChain.doFilter(request, response);
             return;
         }
 
-        final String jwt = authHeader.substring(7);
-        logger.debug("Processing JWT token: {}...", jwt.substring(0, Math.min(10, jwt.length())));
+        // Extract Authorization header
+        String header = request.getHeader("Authorization");
+
+        // Check if header is missing or doesn't start with "Bearer "
+        if (header == null || !header.startsWith("Bearer ")) {
+            logger.warn("No JWT token found in request headers");
+            response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+            response.getWriter().write("No JWT token found in request headers");
+            return;
+        }
+
+        // Extract the token
+        String token = header.substring(7);
 
         try {
-            final String username = extractUsername(jwt);
+            // Validate token with spring_core microservice
+            validateTokenWithCoreService(token, response, request, filterChain);
+        } catch (Exception e) {
+            logger.error("Error validating JWT token", e);
+            response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+            response.getWriter().write("Invalid JWT token: " + e.getMessage());
+        }
+    }
 
-            // Only process if we have a username and no authentication yet
-            if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-                if (isTokenValid(jwt)) {
-                    logger.debug("Token is valid for user: {}", username);
+    private void validateTokenWithCoreService(String token, HttpServletResponse response,
+                                              HttpServletRequest request, FilterChain filterChain)
+            throws IOException, ServletException {
 
-                    Collection<SimpleGrantedAuthority> authorities = extractAuthorities(jwt);
-                    UserDetails userDetails = new User(username, "", authorities);
+        try {
+            // Create headers for request to core service
+            HttpHeaders headers = new HttpHeaders();
+            headers.set("Authorization", "Bearer " + token);
 
-                    UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
-                            userDetails,
-                            null,
-                            userDetails.getAuthorities()
-                    );
+            // Make request to core service to validate token
+            ResponseEntity<String> coreResponse = restTemplate.exchange(
+                    coreServiceUrl + validateTokenEndpoint,
+                    HttpMethod.GET,
+                    new HttpEntity<>(headers),
+                    String.class
+            );
 
-                    // Set authentication details from request
-                    authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+            // Check if validation was successful
+            if (coreResponse.getStatusCode() == HttpStatus.OK) {
+                // Parse the response
+                JsonNode root = objectMapper.readTree(coreResponse.getBody());
 
-                    // Set authentication in context
-                    SecurityContextHolder.getContext().setAuthentication(authToken);
-                    logger.debug("Authentication set for user: {}", username);
-                }
+                // Extract user information
+                String username = root.path("username").asText();
+                List<String> roles = extractRoles(root);
+
+                // Create authentication token with user information and roles
+                UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
+                        username,
+                        null,
+                        roles.stream()
+                                .map(SimpleGrantedAuthority::new)
+                                .toList()
+                );
+
+                // Set details like you would have from a real JWT
+                authentication.setDetails(request);
+
+                // Set the authentication in the security context
+                SecurityContextHolder.getContext().setAuthentication(authentication);
+
+                // Continue with the filter chain
+                filterChain.doFilter(request, response);
+            } else {
+                logger.warn("Token validation failed: {}", coreResponse.getStatusCode());
+                response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+                response.getWriter().write("Invalid JWT token: authentication failed");
             }
-        } catch (ExpiredJwtException e) {
-            logger.error("JWT token is expired: {}", e.getMessage());
-        } catch (UnsupportedJwtException e) {
-            logger.error("JWT token is unsupported: {}", e.getMessage());
-        } catch (MalformedJwtException e) {
-            logger.error("Invalid JWT token: {}", e.getMessage());
-        } catch (SignatureException e) {
-            logger.error("Invalid JWT signature: {}", e.getMessage());
-        } catch (IllegalArgumentException e) {
-            logger.error("JWT token compact of handler are invalid: {}", e.getMessage());
-        } catch (Exception e) {
-            logger.error("Could not authenticate user", e);
-            // Clear context if there was an error
-            SecurityContextHolder.clearContext();
-        }
-
-        filterChain.doFilter(request, response);
-    }
-
-    public String extractUsername(String token) {
-        return extractClaim(token, Claims::getSubject);
-    }
-
-    public <T> T extractClaim(String token, Function<Claims, T> claimsResolver) {
-        final Claims claims = extractAllClaims(token);
-        return claimsResolver.apply(claims);
-    }
-
-    private Claims extractAllClaims(String token) {
-        return Jwts.parserBuilder()
-                .setSigningKey(getSigningKey())
-                .build()
-                .parseClaimsJws(token)
-                .getBody();
-    }
-
-    private Key getSigningKey() {
-        byte[] keyBytes = secretKey.getBytes();
-        return Keys.hmacShaKeyFor(keyBytes);
-    }
-
-    private boolean isTokenValid(String token) {
-        try {
-            return !isTokenExpired(token);
-        } catch (Exception e) {
-            return false;
+        } catch (RestClientException e) {
+            logger.error("Error connecting to core service for token validation", e);
+            response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
+            response.getWriter().write("Error validating token: core service unavailable");
         }
     }
 
-    private boolean isTokenExpired(String token) {
-        return extractExpiration(token).before(new Date());
-    }
-
-    private Date extractExpiration(String token) {
-        return extractClaim(token, Claims::getExpiration);
-    }
-
-    @SuppressWarnings("unchecked")
-    private Collection<SimpleGrantedAuthority> extractAuthorities(String token) {
-        Claims claims = extractAllClaims(token);
-
-        List<String> roles = claims.get("roles", String.class) != null
-                ? Arrays.asList(claims.get("roles", String.class).split(","))
-                : List.of();
-
-        return roles.stream()
-                .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+    private List<String> extractRoles(JsonNode root) {
+        JsonNode rolesNode = root.path("roles");
+        if (rolesNode.isArray()) {
+            return objectMapper.convertValue(rolesNode, List.class);
+        } else {
+            String role = root.path("role").asText();
+            if (!role.isEmpty()) {
+                return Collections.singletonList(role);
+            }
+        }
+        // Default role if no roles found
+        return Collections.singletonList("ROLE_USER");
     }
 }
